# smartclock_touch

./: .gitignore  GPIO.xlsx
HARDWARE DOC/: BOM_主板_PCB2_2025-12-23.xlsx  GPIO.xlsx  ~$版二次开发文档.docx  触屏版二次开发文档.docx
MAINIDF/: partitions.csv  sdkconfig  sdkconfig.defaults
MAINIDF/docs/: hw_key.md
MAINIDF/main/: CMakeLists.txt  app_ui.c  idf_component.yml  main.c  sys_s.c  yingwu.h
MAINIDF/main/basic/: beepdrive.c  beepdrive.h  jlc_lcd.c  jlc_lcd.h  pm.c  pm.h  sys_s.c  sys_s.h
MAINIDF/main/basic/hardware/: hw_key.c  hw_key.h
MAINIDF/main/fonts/: siyuan_20.c
MAINIDF/main/ui/: app_main_ui.c  app_ui.h  app_wifi_ui.c
TOUCH-IDF/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
TOUCH-IDF/components/st7789/: st7789.c  st7789.h
TOUCH-IDF/main/: CMakeLists.txt  idf_component.yml  lv_conf.h  main.c  tests.c
TOUCH-IDF/main/lib/: lvgl_display.c  lvgl_display.h  touch.c  touch.h
jlc_lvgldemo/08-lcd_lvgl/: sdkconfig  sdkconfig.old
jlc_lvgldemo/08-lcd_lvgl/main/: CMakeLists.txt  esp32_s3_szp.c  esp32_s3_szp.h  idf_component.yml  logo_en_240x240_lcd.h  main.c
jlc_lvgldemo/08-lcd_lvgl/main/basic/: jlc_lcd.c  jlc_lcd.h
jlc_lvgldemo/09-wifi_scan_connect/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults
jlc_lvgldemo/09-wifi_scan_connect/main/: CMakeLists.txt  app_ui.c  app_ui.h  idf_component.yml  main.c
luadb/: consts.lua  devices.lua  ft6636u.lua  glib.lua  lcdd.lua  main.lua
luadb/DOC/: driverDEMO.c  gpiodoc.html  i2cdoc.html
luadb/soc/: LuatOS-SoC_V1008_2_ESP32S3.soc  LuatOS-SoC_V1008_FT6636_ESP32S3.soc
(+1 files in other folders)
