idf_component_register(
SRCS 
    "basic/jlc_lcd.c" 
    "main.c" 
    "basic/pm.c" 
    "basic/beepdrive.c"
    "basic/hardware/hw_key.c" 
    "app_ui.c" 
    "fonts/siyuan_20.c" 
INCLUDE_DIRS 
    "." 
    "basic" 
    "fonts"
REQUIRES 
    littlefs 
    nvs_flash 
    esp_wifi 
    esp_adc 
    driver)